--- a/index.html
+++ b/index.html
@@ -1,1 +1,212 @@
+<!DOCTYPE html>
+<head>
+  <title>Colmar Academy</title>
+  <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
+</head>
+<body>
+  
+  <div class="header">
+   <img class="logo" src="./resources/images/ic-logo.svg">
+   <h1 class="colmar">COLMAR</h1><h1 class="academy">ACADEMY</h1>
+   <ul class="navigation">
+    <a href="#first"><li>On campus</li></a>
+    <a href="#second"><li>Online</li></a>
+    <a href="#locations"><li>For Companies</li></a>
+    <a href="#signin"><li>Sign in</li></a>
+   </ul>
+  </div>
+
+  <div class="learn">
+    <img class="bannerimg" src="./resources/images/banner.jpg">
+    <div class="learntext">
+      <h1>Learn something new everyday</h1>
+      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+      <button class="start">Start here</button>
+
+    </div>
+
+  </div>
+
+  <div class="practice">
+    <div>
+      <img class="bannerimg" src="./resources/images/information-main.jpg">
+      <h2>It doesn't hurt to keep practicing</h2>
+      <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et 
+        commodo lectus, nec consequat neque. Sed non accusam urna. 
+        Phasellus sed consequat neque. Sed non accusam urna. Phasellus sed 
+        consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, 
+        tristique ligua."
+      </p>
+      <p class="quote">
+        Emmanuel, Sr Strategist at Hiring.com
+      </p>
+    </div>
+    <div class="smallphotos">
+      <div class="phototext">
+        <img class="smallimg" src="./resources/images/information-orientation.jpg">
+        <h3>Orientation date</h3>
+        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+        <p class="read">Read more</p>
+      </div>
+      <div class="phototext">
+        <img class="smallimg" src="./resources/images/information-campus.jpg">
+        <h3>Our campus</h3>
+        <p>Find which campus is close by you</p>
+        <p class="read">Read more</p>
+      </div>
+      <div class="phototext2">
+        <img class="smallimg" src="./resources/images/information-guest-lecture.jpg">
+        <h3>Our guest lecture</h3>
+        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+        <p class="read">Read more</p>
+      </div>
+    </div>
+  </div>
+  
+  <div class="learning">
+
+    <div>
+    <h1>Start learning</h1>
+    </div>
+
+    <div class="learning2">
+    
+      <div class="box">
+       <img class="learnimg" src="./resources/images/course-software.jpg">
+       <h3>
+        Software engineering
+       </h3>
+       <p>
+        COURSES
+       </p>
+       <p>
+        Web Development, Mobile Development, iOT, APIs
+       </p>
+      </div>
+
+      <div class="box">
+        <img class="learnimg" src="./resources/images/course-computer-art.jpg">
+        <h3>
+          Computer Art
+        </h3>
+        <p>
+          COURSES
+        </p>
+        <p>
+          Imaging & Design, Web Design, Motion Graphics & Visual Effects,
+          Computer Animation
+        </p>
+      </div>
+
+      <div class="box">
+        <img class="learnimg" src="./resources/images/course-design.jpg">
+        <h3>
+         Design
+        </h3>
+        <p>
+          COURSES
+        </p>
+        <p>
+          User Experience Design, User Research, Visual Design
+        </p>
+      </div>
+
+      <div class="box">
+        <img class="learnimg" src="./resources/images/course-data.jpg">
+        <h3>
+          Data
+        </h3>
+        <p>
+          COURSES</p>
+        <p>
+          Data Science, Big Data, SQL, Data Visualization
+        </p>
+      </div>
+
+      <div class="box">
+        <img class="learnimg" src="./resources/images/course-business.jpg">
+        <h3>
+         Business
+        </h3>
+        <p>
+          COURSES
+        </p>
+        <p>
+          Product Development, Business Development, Startup
+        </p>
+      </div>
+
+      <div class="box">
+        <img class="learnimg" src="./resources/images/course-marketing.jpg">
+        <h3>
+          Marketing
+        </h3>
+        <p>
+          COURSES
+        </p>
+        <p>
+          Analytics, Content Marketing, Mobil Marketing
+        </p>
+      </div>
+
+    </div>
+
+    <div class="exhibit">
+      <div>
+        <h2>Thesis exhibit</h2>
+      </div>
+    
+      <div>
+        <p class="video">
+         <video controls autoplay="" muted="" playsinline="">
+         <source src="./resources/videos/thesis.mp4" type="video/mp4">
+         </video>
+        </p>
+      </div>
+
+      <div>
+        <div class="phototext">
+          <img class="smallimg" src="./resources/images/thesis-fisma.jpg">
+        </div>
+
+        <div>
+          <h3>Fisma: Design and Prototype</h3>
+            <p>Designer showcase of new prototype product</p>
+          </div>
+          <div class="phototext">
+            <img class="smallimg" src="./resources/images/thesis-now-and-then.jpg">
+          </div>
+          <div>
+            <h3>Now and then</h3>
+            <p>Research study about New York</p>
+          </div>
+        </div>
+
+        <div class="urban">
+          <h3>
+            Reimagine urban
+          </h3>
+          <p class="u2">
+            "Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo
+            lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex.
+            Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."
+          </p>
+        </div>
+      </div>
+    </div>
+
+</body>
+
+<footer>
+  <div class="footdiv">
+    <p class="footer1">
+      &#169; 2016 Colmar Academy: all rights reserved
+    </p>
+    <p class="footer2">
+    Terms Privacy
+    </p>
+  </div>
+</footer>
 
