mobile version added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
    </div>
   </nav>
 
+  <div class="mobile-nav">
+    <a href="#">
+      <img src="./resources/images/ic-logo.svg"/>
+    </a>
+    <a href="#">
+      <img src="./resources/images/ic-on-campus.svg"/>
+    </a>
+    <a href="#">
+      <img src="./resources/images/ic-online.svg" />
+    </a>
+    <a href="#">
+      <img src="./resources/images/ic-login.svg" />
+    </a>
+  </div>
+
   <div class="learn">
     <div class="bannerimg">
      <img src="./resources/images/banner.jpg">
@@ -88,6 +103,39 @@
         </div>
         <div class="guest-info">
          <h4>Our guest lecture</h4>
+         <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+         <p class="read">Read more</p>
+        </div>
+      </div>
+    </div>
+    
+    <div class="smallphotos-mobile">
+      <div class="orientation">
+        <div class="smallimg">
+         <img class="smallimg" src="./resources/images/information-orientation-mobile.jpg">
+        </div>
+         <div class="orientation-info">
+         <h2>Orientation date</h2>
+         <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+         <p class="read">Read more</p>
+        </div>
+      </div>
+      <div class="campus">
+        <div class="smallimg">
+        <img class="smallimg" src="./resources/images/information-campus-mobile.jpg">
+        </div>
+        <div class="campus-info">
+         <h2>Our campus</h2>
+         <p>Find which campus is close by you</p>
+         <p class="read">Read more</p>
+        </div>
+      </div>
+      <div class="guest">
+        <div class="smallimg">
+         <img class="smallimg" src="./resources/images/information-guest-lecture-mobile.jpg">
+        </div>
+        <div class="guest-info">
+         <h2>Our guest lecture</h2>
          <p>Join a keynote with Oliver Sack about music in medical treatment</p>
          <p class="read">Read more</p>
         </div>
@@ -207,11 +255,20 @@
       </div>
 
     </div>
+    
+    <div class="sl-mobile">
+      <button class="sl-button"><h2>Software engineering</h2></button>
+      <button class="sl-button"><h2>Computer art</h2></button>
+      <button class="sl-button"><h2>Design</h2></button>
+      <button class="sl-button"><h2>Data</h2></button>
+      <button class="sl-button"><h2>Business</h2></button>
+      <button class="sl-button"><h2>Marketing</h2></button>
+      </div>
     </div>
 
     <div class="practice">
       <div>
-        <h2>Thesis exhibit</h2>
+        <h1>Thesis exhibit</h1>
       </div>
       <br>
       <br>
